2004-03-28  Christian Ruppert <arc@users.sf.net>
	* uwm/Makefile.am: added conf_func.c to sources and conf_func.h,
	  conf_func_list.h, settings_global_list.h and
	  settings_workspace_list.h to headers.
	* uwm/conf_func.c: added file for functions to be used in
	  configuration files.
	* uwm/confparse.tab.y: added partial initialisation function context.

2004-03-26  Christian Ruppert <arc@users.sf.net>
	* uwm/*.h: added a short copyright notice to the header just to make
	  sure.
	* uwm/settings_workspace_list.h, uwm/settings_global_list.h: added
	  files to guarantee consistency between settings.h and
	  confparse.tab.y.
	* uwm/settings.h, uwm/confparse.tab.y: now including
	  uwm/settings_*_list.h for settings definition which guarantees
	  consistency.
	* uwm/workspaces.c, uwm/uwm.c: disabled ScreenCommand which will be
	  replaced by the new configuration language.
	* uwm/conf_func.h, uwm/conf_func_list.h: added files for configuration
	  language runtime function definitions.

2004-03-07  Christian Ruppert <arc@users.sf.net>
	* uwm/confparse.tab.y, uwm/settings.h, uwm/confparse.h: added
	  HexCenterX and HexCenterY config options.
	* uwm/uwm.h, uwm/winmenu.c, uwm/init.c: grouped all hex-menu related
	  elements in TheScreen into HexMenu substructure.

2004-02-15  Christian Ruppert <arc@users.sf.net>
	* uwm/init.h, uwm/uwm.h, uwm/handlers.c, uwm/uwm.c, uwm/uwmmenu.c:
	  moved icccmFlags from InitS to TheScreen.
	* uwm/init.h, uwm/init.c: removed HexPath from InitS.
	* uwm/uwm.h, uwm/init.c: PrepareIcons changed to allow a different
	  shape for each hex icon. THE SHAPE IS TAKEN FROM THE UNSELECTED
	  PIXMAP, THE HOTSPOT DEFINES THE POSITION IN THE PARENT WINDOW!

2004-02-07  Christian Ruppert <arc@users.sf.net>
	* uwm/workspaces.c(SetWSBackground), uwm/uwm.h: replaced
	  TheScreen.BackCommand by settings.WorkspaceSettings[]->ScreenCommand.
	* uwm/workspaces.c(SetWSBackground), uwm/uwm.h: removed
	  TheScreen.SetBackground.